--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -17,7 +17,7 @@
         <td><%= store.address %></td>
         <td>
           <%= link_to "Edit Store", edit_admin_store_path(store), class: "btn btn-default btn-xs" %>
-          <%= link_to "Delete Store", admin_store_path(store), method: :delete, class: "btn btn-default btn-xs" %>
+          <%= link_to "Delete Store", admin_store_path(store), method: :delete, class: "btn btn-default btn-xs", data: { confirm: "確定刪除#{store.name}" } %>
         </td>
       </tr>
     <% end %>
