--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -19,17 +19,25 @@
 
       <ul class="nav navbar-nav navbar-right">
         <% if !current_user %>
-          <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
+          <li>
+            <%= link_to user_omniauth_authorize_path(:facebook) do %>
+              <i class="fa fa-facebook-square fa-lg"></i>
+              登入
+            <% end %>
+          </li>
         <% else %>
-          <li><%= link_to "登出", destroy_user_session_path, method: :delete %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+              Hi,
+              <%= current_user.email %>
+              <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "登出", destroy_user_session_path, method: :delete %></li>
+            </ul>
+          </li>
         <% end %>
 
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-          </ul>
-        </li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
