--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -12,7 +12,8 @@
   <tbody>
     <% @stores.each do |store| %>
       <tr>
-        <td><%= store.name %></td>
+      
+        <td><%= link_to(store.name, admin_store_path(store)) %></td>
         <td><%= store.phone %></td>
         <td><%= store.address %></td>
         <td>
