修正groupons#index 及 nav_bar連結

--- a/app/views/groupons/index.html.erb
+++ b/app/views/groupons/index.html.erb
@@ -16,7 +16,7 @@
         <% @groupons.each do |groupon| %>
           <tr>
             <td>
-              <%= link_to groupon_path(groupon.token) do %>
+              <%= link_to groupon_products_path(groupon.token) do %>
                 <i class="fa fa-arrow-circle-right fa-3x"></i>
               <% end %>
             </td>
