--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -19,8 +19,9 @@
 
       <ul class="nav navbar-nav navbar-right">
         <% if !current_user %>
-          <%= link_to "登入", new_user_session_path %>
+          <li><%= link_to "登入", new_user_session_path %></li>
         <% else %>
+          <li><%= link_to "我想開團", stores_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
               Hi,
