完成修改團購功能

--- a/app/views/groupons/edit.html.erb
+++ b/app/views/groupons/edit.html.erb
@@ -1,7 +1,7 @@
-<h2>新增團購</h2>
-<h3><%= @store.name %></h3>
+<h2>修改團購</h2>
+<h3><%= @groupon.store.name %></h3>
 
-<%= simple_form_for [@store, @groupon] do |f| %>
+<%= simple_form_for @groupon, url: groupon_path(@groupon.token) do |f| %>
   <%= f.input :deadline %>
   <%= f.input :is_secret, label: "不公開", as: :boolean %>
   <%= f.submit "Submit", data: { disable_with: "Submitting..." } %>
