--- a/app/views/groupon/products/index.html.erb
+++ b/app/views/groupon/products/index.html.erb
@@ -21,7 +21,7 @@
       <tr>
         <td><%= product.title %></td>
         <td><%= product.price %></td>
-        <td><%= link_to "訂購", add_to_order_groupon_product_path(@groupon.token, product), method: :post, class: "btn btn-info" %></td>
+        <td><%= link_to "訂購", add_to_order_groupon_product_path(@groupon.token, product), method: :post, class: "btn btn-info", data: { confirm: "確認訂購 #{product.title} ?" } %></td>
       </tr>
     <% end %>
   </tbody>
