--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -13,14 +13,33 @@
       <th>品名</th>
       <th>單價</th>
       <th>數量</th>
+      <% unless @order.is_paid? || @order.groupon.times_up? %>
+        <th>other</th>
+        <th>取消</th>
+      <% end %>
+
     </tr>
   </thead>
   <tbody>
-    <% @order.order_items.each do |order_items| %>
+    <% @order.order_items.each do |order_item| %>
       <tr>
-        <td><%= order_items.product.title %></td>
-        <td><%= order_items.product.price %></td>
-        <td><%= order_items.quantity %></td>
+        <td><%= order_item.product.title %></td>
+        <td><%= order_item.product.price %></td>
+
+        <% if !@order.is_paid? && !@order.groupon.times_up? %>
+          <%= simple_form_for [@order, order_item] do |f| %>
+            <td><%= f.input :quantity, label: false, collection: 1..10 %></td>
+            <td><%= f.submit "修改數量", class: "btn btn-default" %></td>
+          <% end %>
+          <td>
+            <%= link_to order_order_item_path(@order.token, order_item), method: :delete do %>
+              <i class="fa fa-trash fa-2x"></i>
+            <% end %>
+          </td>
+        <% else %>
+          <td><%= order_item.quantity %></td>
+        <% end %>
+
       </tr>
     <% end %>
   </tbody>
