function: 刪除訂單商品

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -32,7 +32,7 @@
             <td><%= f.submit "修改數量", class: "btn btn-default" %></td>
           <% end %>
           <td>
-            <%= link_to order_order_item_path(@order.token, order_item), method: :delete do %>
+            <%= link_to order_order_item_path(@order, order_item), method: :delete, data: { confirm: "確定刪除#{order_item.product.title}"  } do %>
               <i class="fa fa-trash fa-2x"></i>
             <% end %>
           </td>
