function: 我的訂單列表

--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -21,6 +21,7 @@
         <% if !current_user %>
           <li><%= link_to "登入", new_user_session_path %></li>
         <% else %>
+          <li><%= link_to "我的訂單列表", orders_path %></li>
           <li><%= link_to "我想開團", stores_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
