--- a/app/views/groupon/products/index.html.erb
+++ b/app/views/groupon/products/index.html.erb
@@ -6,6 +6,12 @@
   <%= time_format(@groupon.deadline) %>
 </h4>
 
+<h4>
+  <% if @groupon.hosts.include?(current_user) %>
+    <%= link_to "團購訂單列表", overview_groupon_path(@groupon.token) %>
+  <% end %>
+</h4>
+
 <% if @my_order.present? %>
   <h3>
     <%= link_to order_path(@my_order.token) do %>
