--- a/app/views/groupons/overview.html.erb
+++ b/app/views/groupons/overview.html.erb
@@ -78,7 +78,7 @@
 
 
   <div class="panel-body">
-    <% @order_items.each do |product_title, quantity| %>
+    <% @order_items_and_price.each do |product_title, quantity| %>
       <%= product_title %> ( <%= quantity %> )
       <br>
     <% end %>
