修改增加品項的view

--- a/app/views/admin/stores/_product_fields.html.erb
+++ b/app/views/admin/stores/_product_fields.html.erb
@@ -7,7 +7,7 @@
       <div class="col-xs-3">
         <%= f.input :price, input_html: { class: "form-inline"} %>
       </div>
-      <div class="col-xs-1"><%= link_to_remove_association "移除", f %> </div>
+      <div class="col-xs-1"><%= link_to_remove_association "移除", f, class: "btn btn-danger btn-xs" %> </div>
     </div>
   </div>
 </div>
