--- a/app/views/admin/stores/_form.html.erb
+++ b/app/views/admin/stores/_form.html.erb
@@ -1,20 +1,37 @@
 
 <%= simple_form_for store do |f| %>
-  <div class="form-group">
-    <%= f.input :name, input_html: { class: "form-control"} %>
-    <%= f.input :phone, input_html: { class: "form-control"} %>
-    <%= f.input :address, input_html: { class: "form-control"} %>
+  <div class="row">
+    <div class="group col-md-4">
+      <%= f.input :name, input_html: { class: "form-control"} %>
+    </div>
+    <div class="group col-md-4">
+      <%= f.input :phone, input_html: { class: "form-control"} %>
+    </div>
+    <div class="group col-md-4">
+      <%= f.input :address, input_html: { class: "form-control"} %>
+    </div>
   </div>
 
-  <div class="form-group">
-    <%= f.simple_fields_for :products do |product| %>
-      <div class="form-group">
-        <%= render 'product_fields', :f => product %>
+  <hr>
+
+
+  <div class="row">
+    <%= link_to_add_association '新增品項', f, :products, class: "btn btn-info" %>
+    <%= f.submit "Submit", class: "btn btn-primary pull-right", data: { disable_with: "Submitting..." } %>
+
+    <br>
+    <br>
+    <br>
+
+    <div class="progress">
+      <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+        分隔島
       </div>
+    </div>
 
+    <%= f.simple_fields_for :products do |product| %>
+      <%= render 'product_fields', :f => product %>
     <% end %>
-    <%= link_to_add_association '新增便當', f, :products %>
   </div>
 
-  <%= f.submit "Submit", class: "btn btn-primary", data: { disable_with: "Submitting..." } %>
 <% end %>
