--- a/app/views/admin/stores/_opt_fields.html.erb
+++ b/app/views/admin/stores/_opt_fields.html.erb
@@ -1,14 +1,13 @@
 <div class="nested-fields">
-  <div class="row">
 
     <div class="form-group">
 
-      <div class="group col-md-6">
-        <div class="input-group" style="padding-bottom:2px;">
-          <span class="input-group-addon"> 品名 </span>
-          <%= f.text_field :title, class: 'form-control' %>
+      <div class="group col-md-4 col-md-offset-8">
+        <div class="input-group input-group-sm" style="padding-bottom:2px;">
+          <span class="input-group-addon"> 選項 </span>
+          <%= f.text_field :content, class: 'form-control' %>
 
-          <span class="input-group-addon"> 價格 </span>
+          <span class="input-group-addon"> 加價 </span>
           <%= f.text_field :price, class: 'form-control' %>
 
           <span class="input-group-btn">
@@ -20,7 +19,6 @@
         </div>
       </div>
 
-    </div>
 
   </div>
 </div>
