--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -13,6 +13,10 @@
       <th>品名</th>
       <th>單價</th>
       <th>數量</th>
+      <% if @order.groupon.store.is_drink? %>
+        <th>糖</th>
+        <th>冰</th>
+      <% end %>
       <% unless @order.is_paid? || @order.groupon.times_up? %>
         <th>other</th>
         <th>取消</th>
@@ -29,7 +33,12 @@
         <% if !@order.is_paid? && !@order.groupon.times_up? %>
           <%= simple_form_for [@order, order_item] do |f| %>
             <td><%= f.input :quantity, label: false, collection: 1..10 %></td>
-            <td><%= f.submit "修改數量", class: "btn btn-default" %></td>
+            <% if @order.groupon.store.is_drink? %>
+              <td><%= f.input :sugar, label: false, collection: ["無糖", "微糖", "半糖", "少糖", "正常甜"] %></td>
+              <td><%= f.input :ice, label: false, collection: ["熱的", "去冰", "微冰", "少冰", "正常冰"] %></td>
+            <% end %>
+
+            <td><%= f.submit "修改", class: "btn btn-default" %></td>
           <% end %>
           <td>
             <%= link_to order_order_item_path(@order, order_item), method: :delete, data: { confirm: "確定刪除#{order_item.product.title}"  } do %>
