--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -19,7 +19,12 @@
 
       <ul class="nav navbar-nav navbar-right">
         <% if !current_user %>
-          <li><%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %></li>
+          <li>
+            <%= link_to user_omniauth_authorize_path(:facebook) do %>
+              <i class="fa fa-facebook-square fa-2x"></i>
+              登入
+            <% end %>
+          </li>
         <% else %>
           <li><%= link_to "我的訂單列表", orders_path %></li>
           <li><%= link_to "我想開團", stores_path %></li>
