設定各頁面標題

--- a/app/views/groupons/edit.html.erb
+++ b/app/views/groupons/edit.html.erb
@@ -1,4 +1,6 @@
-<h2>修改團購</h2>
+<% @page_title = "修改團購設定" %>
+
+<h2>修改團購設定</h2>
 <h3><%= @groupon.store.name %></h3>
 
 <%= simple_form_for @groupon, url: groupon_path(@groupon.token) do |f| %>
