--- a/app/views/groupons/index.html.erb
+++ b/app/views/groupons/index.html.erb
@@ -1,6 +1,8 @@
+<% @page_title = "公開團購列表" %>
+
 <div class="col-md-8 col-md-offset-2">
   <div class="panel panel-default">
-    <div class="panel-heading">團購列表</div>
+    <div class="panel-heading">公開團購列表</div>
 
     <table class="table">
       <thead>
