--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -1,3 +1,5 @@
+<% @page_title = "店家列表" %>
+
 <h2>店家列表</h2>
 <%= link_to "新增店家", new_admin_store_path, class: "btn btn-default btn-xs pull-right" %>
 <table class="table table-hover">
