--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -1,3 +1,5 @@
+<% @page_title = "商品列表" %>
+
 <div class="col-md-12">
   <div class="group">
     <%= link_to("Edit", edit_admin_store_path(@store), class: "btn btn-primary pull-right")%>
