--- a/app/views/groupon/products/index.html.erb
+++ b/app/views/groupon/products/index.html.erb
@@ -1,3 +1,5 @@
+<% @page_title = "團購商品列表" %>
+
 <h2>現在開始訂購 <%= @groupon.store.name %> </h2>
 <h4> 截止時間為...
   <% if @groupon.hosts.include?(current_user) %>
