--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,3 +1,5 @@
+<% @page_title = "店家列表" %>
+
 <h2>店家列表</h2>
 
 <table class="table table-hover">
@@ -16,7 +18,7 @@
         <td>
           <%= link_to "開團", new_store_groupon_path(store), class: "btn btn-warning btn-sm", data: { confirm: "您選擇了 #{store.name} 進行開團" } %>
         </td>
-        <td><%= link_to(store.name, admin_store_path(store)) %></td>
+        <td><%= store.name %></td>
         <td><%= store.phone %></td>
         <td><%= store.address %></td>
 
