--- a/app/views/groupons/overview.html.erb
+++ b/app/views/groupons/overview.html.erb
@@ -16,66 +16,68 @@
 <div class="panel panel-primary">
   <div class="panel-heading">訂購列表</div>
 
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th>團員</th>
-        <th>購買項目</th>
-        <th>價格</th>
-        <th>是否付款</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @grouped_orders.each do |team, team_orders| %>
-        <% nobody_pay = true %>
-        <tr class="info">
-          <td colspan="4">
-            <%= team %>
-          </td>
+  <div class="table-responsive">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>團員</th>
+          <th>購買項目</th>
+          <th>價格</th>
+          <th>是否付款</th>
         </tr>
+      </thead>
 
-        <% team_orders.each do |order| %>
-          <tr>
-            <td><%= order.user.name %></td>
-            <td>
-              <% order.order_items.each do |order_item| %>
-                <%= order_item.product.title + " " + order_item.sugar + " " + order_item.ice %>
-                ( <%= order_item.quantity %> )
-                <br>
-              <% end %>
-            </td>
-            <td><%= order.price %></td>
-            <td>
-              <% if order.is_paid? %>
-                <%= link_to "退款", return_money_groupon_order_path(@groupon.token, order.token), method: :post, class: "btn btn-warning btn-xs" %>
-                <% nobody_pay = false %>
-              <% else %>
-                <%= link_to "設定為已付款", pay_money_groupon_order_path(@groupon.token, order.token), method: :post, class: "btn btn-info btn-xs" %>
-              <% end %>
+      <tbody>
+        <% @grouped_orders.each do |team, team_orders| %>
+          <% nobody_pay = true %>
+          <tr class="info">
+            <td colspan="4">
+              <%= team %>
             </td>
           </tr>
-        <% end %>
-        <tr>
-          <td colspan="2">
+
+          <% team_orders.each do |order| %>
+            <tr>
+              <td><%= order.user.name %></td>
+              <td>
+                <% order.order_items.each do |order_item| %>
+                  <%= order_item.product.title + " " + order_item.sugar + " " + order_item.ice %>
+                  ( <%= order_item.quantity %> )
+                  <br>
+                <% end %>
+              </td>
+              <td><%= order.price %></td>
+              <td>
+                <% if order.is_paid? %>
+                  <%= link_to "退款", return_money_groupon_order_path(@groupon.token, order.token), method: :post, class: "btn btn-warning btn-xs" %>
+                  <% nobody_pay = false %>
+                <% else %>
+                  <%= link_to "設定為已付款", pay_money_groupon_order_path(@groupon.token, order.token), method: :post, class: "btn btn-info btn-xs" %>
+                <% end %>
+              </td>
+            </tr>
+          <% end %>
+          <tr>
+            <td colspan="2">
+            </td>
+            <td>
+              <%= team %>
+              總價為： <%= team_orders.inject(0) { |sum, order| sum + order.price } %>
           </td>
           <td>
-            <%= team %>
-            總價為： <%= team_orders.inject(0) { |sum, order| sum + order.price } %>
-        </td>
-        <td>
-          <% if nobody_pay %>
-            <%= link_to "整組付款 <<", pay_money_by_team_groupon_orders_path(@groupon.token, team: team), method: :post, class: "btn btn-primary btn-xs" %>
-          <% end %>
-        </td>
+            <% if nobody_pay %>
+              <%= link_to "整組付款 <<", pay_money_by_team_groupon_orders_path(@groupon.token, team: team), method: :post, class: "btn btn-primary btn-xs" %>
+            <% end %>
+          </td>
+          </tr>
+        <% end %>
+        <tr class="danger">
+          <td colspan="4">
+          </td>
         </tr>
-      <% end %>
-      <tr class="danger">
-        <td colspan="4">
-        </td>
-      </tr>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
+  </div>
 
 
   <div class="panel-body">
