--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -37,7 +37,7 @@
             <%= simple_form_for [@order, order_item] do |f| %>
               <td><%= f.input :quantity, label: false, collection: 1..10 %></td>
               <% if @order.groupon.store.is_drink? %>
-                <td><%= f.input :sugar, label: false, collection: ["無糖", "微糖", "半糖", "少糖", "正常甜"] %></td>
+                <td><%= f.input :sugar, label: false, collection: ["無糖", "一分糖", "微糖", "半糖", "少糖", "正常甜"] %></td>
                 <td><%= f.input :ice, label: false, collection: ["熱的", "去冰", "微冰", "少冰", "正常冰"] %></td>
               <% end %>
 
