將我的訂單的 數量欄位 改為購買數量，解決iphone 5 顯示不出數字的BUG

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -15,7 +15,7 @@
       <tr>
         <th>品名</th>
         <th>單價</th>
-        <th>數量</th>
+        <th>購買數量</th>
         <% if @order.groupon.store.is_drink? %>
           <th>糖</th>
           <th>冰</th>
