--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -17,8 +17,8 @@
         <th>單價</th>
         <th>購買數量</th>
         <% if @order.groupon.store.is_drink? %>
-          <th>糖</th>
-          <th>冰</th>
+          <th>選擇糖份</th>
+          <th>選擇冰塊</th>
         <% end %>
         <% unless @order.is_paid? || @order.groupon.times_up? %>
           <th>other</th>
