--- a/app/views/admin/stores/_form.html.erb
+++ b/app/views/admin/stores/_form.html.erb
@@ -30,6 +30,14 @@
     <%= f.submit "Submit", class: "btn btn-primary pull-right", data: { disable_with: "Submitting..." } %>
   </div>
 
+  <%= render "divide" %>
+
+  <div class="row">
+    <%= link_to_add_association '新增選項', f, :opts, class: "btn btn-info btn-xs pull-right" %>
+    <%= f.fields_for :opts do |opt| %>
+      <%= render 'opt_fields', :f => opt %>
+    <% end %>
+  </div>
 
   <hr>
 
@@ -39,24 +47,13 @@
     <br>
     <br>
 
-    <div class="progress">
-      <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-        分隔島
-      </div>
-    </div>
+    <%= render "divide" %>
 
     <br>
     <br>
 
     <%= f.fields_for :products do |product| %>
       <%= render 'product_fields', :f => product %>
-      <div class="row">
-          <%= link_to_add_association '新增選項', product, :opts, class: "btn btn-info btn-xs pull-right" %>
-        <%= product.fields_for :opts do |opt| %>
-          <%= render 'opt_fields', :f => opt %>
-        <% end %>
-      </div>
-      <hr>
     <% end %>
   </div>
 
