--- a/app/views/admin/stores/_opt_fields.html.erb
+++ b/app/views/admin/stores/_opt_fields.html.erb
@@ -1,24 +1,10 @@
 <div class="nested-fields">
 
-    <div class="form-group">
-
-      <div class="group col-md-4 col-md-offset-8">
-        <div class="input-group input-group-sm" style="padding-bottom:2px;">
-          <span class="input-group-addon"> 選項 </span>
-          <%= f.text_field :content, class: 'form-control' %>
-
-          <span class="input-group-addon"> 加價 </span>
-          <%= f.text_field :price, class: 'form-control' %>
-
-          <span class="input-group-btn">
-            <%= link_to_remove_association f, class: "btn btn-default" do %>
-              <i class="fa fa-long-arrow-right"></i>
-              <i class="fa fa-trash"></i>
-            <% end %>
-          </span>
-        </div>
-      </div>
-
-
+  <div class="group col-md-3">
+    <%= f.input :content, label: "選項", place_holder: "珍珠、椰果、貢丸" %>
+    <%= f.input :price, label: "價錢" %>
+    <%= link_to_remove_association "取消", f, class: "btn btn-default" %>
+    <hr>
   </div>
+
 </div>
