--- a/app/views/admin/stores/edit.html.erb
+++ b/app/views/admin/stores/edit.html.erb
@@ -2,3 +2,14 @@
 <h2>修改商店: <%= @store.name %> </h2>
 
 <%= render "form", store: [:admin, @store] %>
+
+<hr>
+
+<div class="col-md-6 col-md-offset-3">
+  <div class="panel panel-danger">
+    <div class="panel-heading">Danger Zone</div>
+    <div class="panel-body">
+      <%= link_to "刪除店家", admin_store_path(@store), method: :delete, data: { confirm: "確定刪除#{@store.name}" } %>
+    </div>
+  </div>
+</div>
