--- a/app/views/admin/stores/_divide.html.erb
+++ b/app/views/admin/stores/_divide.html.erb
@@ -1,5 +1,7 @@
-<div class="progress">
-  <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-    分隔島
+<div class="row" style="padding-top: 10px;">
+  <div class="progress">
+    <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
+      分隔島
+    </div>
   </div>
 </div>
