優化修改產品頁面的layout

--- a/app/views/admin/stores/edit.html.erb
+++ b/app/views/admin/stores/edit.html.erb
@@ -1,5 +1,6 @@
 <% @page_title = "修改商店" %>
 <h2>修改商店: <%= @store.name %> </h2>
+<h3> <%= link_to "修改商店商品", edit_products_admin_store_path(@store) %> </h3>
 
 <%= render "form", store: [:admin, @store] %>
 
