--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,67 +1,20 @@
 <% @page_title = "我的訂單" %>
 
-<h2>訂單頁面</h2>
+<h2>訂單檢視</h2>
 
 <h3>
   <%= link_to groupon_products_path(@order.groupon.token) do %>
-    還有點餓？
+    還有點餓？回到訂購頁面
     <i class="fa fa-arrow-circle-left"></i>
   <% end %>
 </h3>
 
 <div class="table-responsive">
-  <table class="table table-bordered">
-    <thead>
-      <tr>
-        <th>品名</th>
-        <th>單價</th>
-        <th>購買數量</th>
-        <% if order_editable?(@order) %>
-          <% if @order.groupon.store.is_drink? %>
-            <th>選擇糖份</th>
-            <th>選擇冰塊</th>
-          <% end %>
-          <th>Appends</th>
-          <th>other</th>
-          <th>取消</th>
-        <% end %>
-        <th>小計</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <% @order.order_items.each do |order_item| %>
-        <tr>
-          <td><%= order_item.product.title %></td>
-          <td><%= order_item.product.price %></td>
-
-          <% if order_editable?(@order) %>
-            <%= simple_form_for [@order, order_item] do |f| %>
-              <td><%= f.input :quantity, label: false, collection: 1..10 %></td>
-              <% if @order.groupon.store.is_drink? %>
-                <td><%= f.input :sugar, label: false, collection: ["無糖", "一分糖", "微糖", "半糖", "少糖", "正常甜"] %></td>
-                <td><%= f.input :ice, label: false, collection: ["熱的", "去冰", "微冰", "少冰", "正常冰"] %></td>
-              <% end %>
-              <td>
-                <%= f.association :opts, collection: @opts, label: false,  as: :check_boxes, label_method: lambda { |opt| "#{opt.content} +#{opt.price}元" } %>
-              </td>
-
-              <td><%= f.submit "修改", class: "btn btn-default" %></td>
-            <% end %>
-            <td>
-              <%= link_to order_order_item_path(@order, order_item), method: :delete, data: { confirm: "確定刪除#{order_item.product.title}"  } do %>
-                <i class="fa fa-trash fa-2x"></i>
-              <% end %>
-            </td>
-          <% else %>
-            <td><%= order_item.quantity %></td>
-          <% end %>
-          <td><%= order_item.total_price %></td>
-
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+  <% if order_editable?(@order) %>
+    <%= render "order_summary_editable" %>
+  <% else %>
+    <%= render "order_summary" %>
+  <% end %>
 </div>
 
 <h3>總價: <%= @order.price %></h3>
@@ -71,6 +24,6 @@
     <h3> <span class="class label label-info"> 已付款 </span> </h3>
   <% else %>
     <h3> <span class="class label label-danger"> 訂單已成立， </span> </h3>
-    <h3> <span class="class label label-danger"> 確認無誤就可以去付錢了。 </span> </h3>
+    <h3> <span class="class label label-danger"> 確認無誤即可付款。 </span> </h3>
   <% end %>
 </div>
