優化 orders#index 頁面

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -20,7 +20,7 @@
 
           <div class="pull-right">
             <%= order.groupon.store.name %>
-            <div class="hidden-xs"> , 團長：<%= order.groupon.hosts.first.name %> </div>
+            <div class="hidden-xs"> 團長：<%= order.groupon.hosts.first.name %> </div>
           </div>
         </div>
 
