--- a/app/views/groupons/edit.html.erb
+++ b/app/views/groupons/edit.html.erb
@@ -4,7 +4,7 @@
 <h3><%= @groupon.store.name %></h3>
 
 <%= simple_form_for @groupon, url: groupon_path(@groupon.token) do |f| %>
-  <%= f.input :deadline %>
-  <%= f.input :is_secret, label: "不公開", as: :boolean %>
-  <%= f.submit "Submit", data: { disable_with: "Submitting..." } %>
+  <%= f.input :deadline %> <br>
+  <%= f.input :is_secret, label: "不公開", as: :boolean %> <br>
+  <%= f.submit "Submit", class: "btn btn-default", data: { disable_with: "Submitting..." } %>
 <% end %>
